objects/Test_Demo__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NZ_Post_field__c</fullName>
        <description>For Demo purpose</description>
        <label>NZ Post field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_field__c</fullName>
        <label>Test field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Test Demo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>